syntax = "proto3";

import "commons.proto";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.chordzilla.proto";

service JoinChord {
  rpc Join (JoinChordRequest) returns (JoinChordResponse) {}
}

message JoinChordRequest {
  NodeInformation newNode = 1;
}

message JoinChordResponse {}